# sha3

./: CMakeLists.txt  LICENSE
.github/workflows/: ci.yml
include/: sha3.h
src/: benchmark.cpp  sha3.cpp
